--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,3 +2,16 @@
 // ---------------------------------
 
 @import "vendor/normalize";
+
+/* GLOBAL */
+@import "global/variables";
+@import "global/mixins";
+@import "global/fonts";
+@import "global/global";
+@import "global/visually-hidden";
+
+/* BLOCKS */
+@import "blocks/navigation";
+@import "blocks/header";
+
+/* COMPONENTS */
